--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -14,6 +14,7 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-react": "1.0.0",
     "babel-preset-react": "^6.5.0",
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "jquery": "^2.2.1",
     "live-server": "^1.2.1",
