--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -20,8 +20,10 @@
     "live-server": "^1.2.1",
     "lodash": "^4.6.1",
     "mysql": "^2.17.1",
+    "mysql2": "^1.6.5",
     "nodemon": "^1.19.0",
     "react": "^0.14.9",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "sequelize": "^5.8.5"
   }
 }
